fixed issues solved to be aligned with flex-end/bottom of page

--- a/css/index.css
+++ b/css/index.css
@@ -182,7 +182,7 @@ html {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  align-items: flex-start;
+  align-items: flex-end;
   width: 100%;
   padding: 0.7rem;
   color: #A89996;
