--- a/less/homePage.less
+++ b/less/homePage.less
@@ -7,7 +7,7 @@
 
   .issuesSolved {
     .display(row, space-between, center);
-    align-items: flex-start;
+    align-items: flex-end;
     width: 100%;
     padding: .7rem;
     color: #A89996;
